# faustctf-2021-merklechat

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  Makefile  README.md  metadata.yml
checker/: Cargo.toml  merklechat.py  template.py
checker/src/: main.rs
etc/nginx/sites-enabled/: merklechat.conf
server/: Cargo.toml  merklechat.service
server/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  log.rs  utils.rs
www/: index.html
www/img/: Makefile  tikzpeople.tex
