[package]
name = "merklewasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
#wasm-opt = ["-O2", "--enable-mutable-globals"]

[profile.release]
lto = true
opt-level = "z"

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.63" , features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
aes-soft = "0.6"
aes-gcm = "0.8"
base64 = "0.13"
rand = { version = "0.7", features = ["std", "wasm-bindgen"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = ["Storage", "Window", "console"]

[lib]
crate-type = ["cdylib", "rlib"]
